# test_task_excel_to_json

./: README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml  server.py  service.py  worker.py
app/api/: __init__.py  general_page.py
app/static/: main.css  main.js
app/templates/: base.html  homepage.html
