[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Nikita Isaev <isaev.nikita.yr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.10"
pytz = "^2022.1"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"
celery = "^5.2.7"
redis = "^4.3.4"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
